<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.darlington.githubjavadev.activities.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/profile_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_profile">

        <RelativeLayout
            android:id="@+id/actual_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cover_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/java_dev"
                app:layout_anchorGravity="bottom|end" />

            <RelativeLayout
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/background" />

            <LinearLayout
                android:id="@+id/my_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/background"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-100dp">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/profileImage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_placeholder"
                    app:civ_border_color="@color/semiTransparentWhite"
                    app:civ_border_width="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="24dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        tools:text="dalin01" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty_dp"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical"
                android:textColor="#ffffff"
                android:textSize="24sp"
                tools:text="Onwuama Darlington" />

            <TextView
                android:id="@+id/java"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:text="@string/java_dev"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/java"
                android:layout_marginLeft="20dp"
                android:fontFamily="sans-serif-light"
                android:textColor="#ffffff"
                android:textSize="18sp"
                tools:text="Lagos" />

            <LinearLayout
                android:id="@+id/bio_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/my_layout"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/bio"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    tools:text="A freelance Android Developer" />

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/card_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bio_layout"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/loader_margin"
                android:layout_marginRight="@dimen/loader_margin"
                android:layout_marginTop="@dimen/loader_margin"
                app:cardCornerRadius="@dimen/card_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/repos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/ten_dp"
                            android:fontFamily="sans-serif-light"
                            android:padding="5dp"
                            android:textColor="#ffffff"
                            android:textSize="18sp"
                            tools:text="150" />

                        <TextView
                            android:id="@+id/my_repos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/ten_dp"
                            android:padding="5dp"
                            android:text="@string/rep"
                            android:textColor="#ffffff"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/ten_dp"
                        android:layout_marginTop="@dimen/ten_dp"
                        android:background="#ffffff" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/ten_dp"
                            android:fontFamily="sans-serif-light"
                            android:padding="5dp"
                            android:textColor="#ffffff"
                            android:textSize="18sp"
                            tools:text="150" />

                        <TextView
                            android:id="@+id/my_followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/ten_dp"
                            android:padding="5dp"
                            android:text="@string/follow"
                            android:textColor="#ffffff"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="@dimen/ten_dp"
                        android:background="#ffffff" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/ten_dp"
                            android:padding="5dp"
                            android:textColor="#ffffff"
                            android:textSize="18sp"
                            tools:text="150" />

                        <TextView
                            android:id="@+id/my_followings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/ten_dp"
                            android:padding="5dp"
                            android:text="@string/followers"
                            android:textColor="#ffffff"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_holder"
                android:layout_marginBottom="@dimen/ten_dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:visibility="gone"
                tools:text="https://api.github.com/users/dalin01" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/link"
                android:layout_marginBottom="@dimen/ten_dp"
                android:layout_marginLeft="@dimen/loader_margin"
                android:layout_marginRight="@dimen/loader_margin"
                android:layout_marginTop="@dimen/loader_margin"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingBottom="15dp"
                    android:paddingTop="@dimen/ten_dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/other"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:padding="@dimen/ten_dp"
                            android:text="@string/comp"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/company"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/ten_dp"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:padding="@dimen/ten_dp"
                            android:text="@string/status"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:padding="@dimen/ten_dp"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/no_internet_connection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_connections" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_dp"
            android:text="@string/no_internet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="retryConnection"
            android:padding="@dimen/ten_dp"
            android:text="@string/retry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/my_bckground_img"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/progress_bar_margin"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_dp"
            android:text="@string/connecting"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

</LinearLayout>
